# 2026_VT_241_NELASOV_12

./: CMakeLists.txt  README.md  image_repository.cpp  image_repository.h  main.cpp  mainwindow.cpp  mainwindow.h  smart_ptr.h
